--- a/client/src/pages/profile/components/hero/hero.css
+++ b/client/src/pages/profile/components/hero/hero.css
@@ -11,7 +11,7 @@
 /* Content */
 .hero__content {
     display: grid;
-    grid-gap: 200px;
+    gap: 18.33vw;
     position: relative;
     text-align: center;
     padding: 0 2rem;
@@ -20,6 +20,7 @@
     transition: opacity 1s cubic-bezier(0.4, 0, 0.2, 1), transform 1s cubic-bezier(0.4, 0, 0.2, 1);
     z-index: 2;
     font-size: 200px;
+    line-height: 1;
     font-family: 'Ganxy', 'Montserrat Alternates', serif;
     font-weight: 900;
     text-shadow:
@@ -54,6 +55,10 @@
     justify-content: center;
 }
 
+.hero__letters:first-child {
+    line-height: 1.4;
+}
+
 .letter {
     display: inline-block;
     will-change: transform, opacity;
@@ -82,14 +87,13 @@
 @media (max-width: 1280px) {
     .hero__content {
         font-size: 140px;
-        grid-gap: 180px;
     }
 }
 
 @media (max-width: 768px) {
     .hero__content {
         font-size: 100px;
-        grid-gap: 140px;
+        gap: 33vw;
     }
 }
 
@@ -99,7 +103,4 @@
         padding: 0 1rem;
     }
 
-    .hero__letters {
-        margin-top: -24px;
-    }
 }
